clean up, use JSON to drive UX

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -2,16 +2,15 @@
 <resources>
 
     <string name="app_name">WearIt</string>
-    <string name="hello_world">View Event Activity</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_view_event">My Message</string>
-    <string name="hello_world1">Hello World</string>
+    <string name="title_activity_view_event">Select A Service</string>
     <string name="title_activity_action_event">Use The SmartTV</string>
-    <string name="title_stalk">Stalk</string>
+    <string name="title_stalk">Service Status</string>
     <string name="usingTv">You\'re Ridin It, Dude!</string>
     <string name="useTv">Use the TV</string>
     <string name="useStalk">Start Stalking</string>
-    <string name="chooseTV">Tap the button to use the TV!</string>
-    <string name="testdriver">Test Driver. Tap button to simulate discovery of TV</string>
-
+    <string name="chooseTV">Choose an action below, then press the Smart TV button to launch it!</string>
+    <string name="extra_action">Action</string>
+    <string name="extra_launch">Launch</string>
+    <string name="discovery_message_title">Found A Service</string>
 </resources>
